<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.evacchi</groupId>
  <artifactId>javac-plugin</artifactId>
  <version>1.0-SNAPSHOT</version>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.sun</groupId>
      <artifactId>tools</artifactId>
      <version>1.8.0</version>
      <scope>system</scope>
      <systemPath>${java.home}/../lib/tools.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-jar-plugin</artifactId>-->
<!--        <version>3.2.0</version>-->
<!--        <configuration>-->
<!--          <archive>-->
<!--            <manifest>-->
<!--              &lt;!&ndash;              <mainClass>&ndash;&gt;-->
<!--              &lt;!&ndash;                io.github.evacchi.javacc.Main&ndash;&gt;-->
<!--              &lt;!&ndash;              </mainClass>&ndash;&gt;-->
<!--            </manifest>-->
<!--          </archive>-->
<!--        </configuration>-->
<!--      </plugin>-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
<!--          <release>11</release>-->
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <forkMode>once</forkMode>
          <!--
            - -add-reads <module>=<target-module>(,<target-module>)*
                              updates <module> to read <target-module>, regardless
                              of module declaration.
                              <target-module> can be ALL-UNNAMED to read all unnamed
                              modules.
            - -add-exports <module>/<package>=<target-module>(,<target-module>)*
                              updates <module> to export <package> to <target-module>,
                              regardless of module declaration.
                              <target-module> can be ALL-UNNAMED to export to all
                              unnamed modules.
            - -add-opens <module>/<package>=<target-module>(,<target-module>)*
                              updates <module> to open <package> to
                              <target-module>, regardless of module declaration.

          -->
<!--          <argLine>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</argLine>-->
<!--          <argLine>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</argLine>-->
<!--          <argLine>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</argLine>-->
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
